--- a/app/src/main/res/layout/sleep_timer_activity.xml
+++ b/app/src/main/res/layout/sleep_timer_activity.xml
@@ -32,24 +32,26 @@
         <ProgressBar
             android:id="@+id/progressCircle"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="324dp"
+            android:layout_height="324dp"
             android:layout_centerInParent="true"
             android:elevation="7dp"
             android:max="60"
             android:progress="0"
             android:progressDrawable="@drawable/ring"
             android:progressTint="#3F51B5"
-            android:rotation="270" />
+            android:rotation="270"
+            android:scrollbarSize="4dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/centerButton"
-            android:layout_width="250dp"
+            android:layout_width="320dp"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:backgroundTint="#FFEB3B"
             android:elevation="0dp"
             android:focusable="auto"
+            android:visibility="visible"
             app:backgroundTint="#00BCD4"
             app:borderWidth="30dp"
             app:srcCompat="@drawable/ring" />
